src/test/ui/issue-6458-3.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-6458-3.rs:14:5
   |
14 |     mem::transmute(0);
   |     ^^^^^^^^^^^^^^ cannot infer type for `U`

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0282"
